--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "com.unity.render-pipelines.universal": "17.0.4",
-    "jp.keijiro.klutter-tools": "2.3.0"
+    "jp.keijiro.klutter-tools": "2.3.0",
+    "jp.keijiro.metatex": "1.0.4"
   },
   "scopedRegistries": [
     {
