--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "com.unity.render-pipelines.universal": "17.0.4",
     "jp.keijiro.klutter-tools": "2.3.0",
-    "jp.keijiro.metatex": "1.0.5"
+    "jp.keijiro.metamesh": "1.2.0",
+    "jp.keijiro.metatex": "1.0.5",
+    "jp.keijiro.vfxgraphassets": "3.9.1"
   },
   "scopedRegistries": [
     {
