--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,7 +4,8 @@
     "jp.keijiro.klutter-tools": "2.3.0",
     "jp.keijiro.metamesh": "1.2.0",
     "jp.keijiro.metatex": "1.0.5",
-    "jp.keijiro.vfxgraphassets": "3.9.1"
+    "jp.keijiro.vfxgraphassets": "3.9.1",
+    "com.unity.modules.animation": "1.0.0"
   },
   "scopedRegistries": [
     {
