--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.recorder": "5.1.2",
     "com.unity.render-pipelines.universal": "17.0.4",
     "jp.keijiro.klutter-tools": "2.3.0",
     "jp.keijiro.metamesh": "1.2.0",
