--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,7 +6,8 @@
     "jp.keijiro.metamesh": "1.2.0",
     "jp.keijiro.metatex": "1.0.5",
     "jp.keijiro.vfxgraphassets": "3.9.1",
-    "com.unity.modules.animation": "1.0.0"
+    "com.unity.modules.animation": "1.0.0",
+    "com.unity.modules.uielements": "1.0.0"
   },
   "scopedRegistries": [
     {
